--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_app_database">AppDatabase</string>
     <string name="title_activity_favoritos_dao">FavoritosDAO</string>
     <string name="title_activity_favoritos_banco">FavoritosBanco</string>
+    <string name="title_activity_horarios_dao">HorariosDAO</string>
 </resources>
